# sockudo

./: .env  Cargo.toml
src/: config.json  http_handler.rs  log.rs  main.rs  namespace.rs  options.rs  token.rs  utils.rs  websocket.rs  ws_handler.rs
src/adapter/: adapter.rs  handler.rs  horizontal_adapter.rs  local_adapter.rs  mod.rs  nats_adapter.rs  redis_adapter.rs  redis_cluster_adapter.rs
src/app/: auth.rs  config.rs  dynamodb_app_manager.rs  manager.rs  memory_app_manager.rs  mod.rs  mysql_app_manager.rs  pg_app_manager.rs
src/cache/: factory.rs  manager.rs  memory_cache_manager.rs  mod.rs  redis_cache_manager.rs  redis_cluster_cache_manager.rs
src/channel/: manager.rs  mod.rs  types.rs
src/connection/: handler.rs  manager.rs  memory_manager.rs  mod.rs  redis_manager.rs  state.rs
src/error/: mod.rs
src/metrics/: mod.rs  prometheus.rs
src/protocol/: constants.rs  messages.rs  mod.rs
src/queue/: manager.rs  memory_queue_manager.rs  mod.rs  queue.rs  redis_queue_manager.rs  sqs_queue_manager.rs
src/rate_limiter/: memory_limiter.rs  middleware.rs  mod.rs  redis_limiter.rs
src/webhook/: integration.rs  mod.rs  queue.rs  sender.rs  types.rs
