[package]
name = "sockudo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
fastwebsockets = { version = "0.8.0", features = [
    "upgrade",
    "with_axum",
    "unstable-split",
    "hyper-util",
    "hyper",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dashmap = "6.1.0"
futures = "0.3.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1.11.1"
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
rand = "0.8.5"
hyper-util = "0.1.10"
hyper = "1.5.0"
colored = "*"
chrono = "*"
sysinfo = "*"
async-trait = "0.1.83"
fred = "10.0.1"


[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]